# AICOMPAny

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  SESSION_HANDOFF_2026-03-15.md  crm_dashboard.md  dashboard.html  dashboard.py  docker-compose.yml  growth_execution_plan.md  lead_triage.md  pyproject.toml  sales_conversion_plan.md  trial_followup_plan.md
examples/: campaign_brief.json  competitor_snapshots.json  crm_dashboard_template.md  first_week_content_pack.md  launch_content_examples.md  lead_pipeline.json  market_signals.json  trial_activity.json
knowledge/: 7_day_followup_messages.md  ceo_dashboard.md  channel_playbooks.md  compliance_rules.md  full_company_blueprint.md  handoff_rules.md  sales_conversion_playbook.md  user_preference.txt  weekly_operating_system.md
src/stock_strategy_growth_crew/: bootstrap.py  crew.py  db.py  llm.py  main.py  models.py  schemas.py  settings.py  web.py  worker.py
src/stock_strategy_growth_crew/config/: agents.yaml  tasks.yaml
src/stock_strategy_growth_crew/tools/: __init__.py  custom_tool.py
tests/: test_api.py
